Beautify the code

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -332,14 +332,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2 : Times Higher Education"
+    "We have undefined values in the \"merged_top\" set due to the lack of information on the website, so we simply propagate NAN values."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now check if we have any undefined values in the set and see that we do."
+    "### Best universities by ratio :\n",
+    "We first determine which universities are the best according to the faculty/student ratio (and display the top of the list). To do that, we create a new DataFrame only containing the relevant information (university, ratio and relative rank for display)."
    ]
   },
   {
@@ -347,50 +348,6 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "merged_top.shape #geting 200 universities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "merged_top[merged_top.isnull().any(axis=1)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We have undefined values, but they are due to the website not containing these informations. For now, we propagate the NAN values."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Ratios"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We first try to determine which university is best according to the faculty/student ratio. To do that, we create a new DataFrame which only contains the name of the university, the ratio and the rank_display in case of a tie. For us, a \"better\" university has a greater ratio."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -416,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we sort the universities according to their international students ratio."
+    "The other important ratio used to determine the quality of a school is international/total students. We use a similar method as before to obtain these numbers."
    ]
   },
   {
@@ -450,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us use these informations to create graphs to have better visuals. For us the \"best\" are the ones in the first 10 universities. As such, we will only need the 10 first universities in the dataframe."
+    "To better understand and visualize the top universities according to each ration, we plot the top 10 universities."
    ]
   },
   {
@@ -481,6 +438,23 @@
     "plt.title(\"Best universities by internatinal students to students ratio\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Best universities by geographic location :\n",
+    "TODO : what happened to our code ?!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -586,14 +560,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Times"
+    "## Exercise 2 : Times Higher Education"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We simply repeat the same process as for TopUniversities for the second ranking (thus, we will not comment the code as above)."
+    "In the following exercise, we mostly do the same steps as for the first exercise. Thus, we will not precise each step (except for different handlings of the data)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data retrieval"
    ]
   },
   {
@@ -604,7 +585,6 @@
    },
    "outputs": [],
    "source": [
-    "#We send the request and save the JSON\n",
     "r = requests.get(TIMES_EDUCATION_JSON)\n",
     "timesjson = r.json()"
    ]
@@ -617,7 +597,6 @@
    },
    "outputs": [],
    "source": [
-    "#Transforming to Data frame\n",
     "times_frame = pd.DataFrame(timesjson['data']).head(200) #Keep the first 200 schools\n",
     "times_frame = times_frame[[d for d in times_frame.columns if not ('score' in d)]] #Drop useless frames\n",
     "del times_frame['member_level'],\\\n",
@@ -639,7 +618,28 @@
    },
    "outputs": [],
    "source": [
-    "times_frame.shape #getting 200 universities\n",
+    "#We create a file to store the Times Higher Education Ranking\n",
+    "times_file = DATA_FOLDER + 'times_ranking.pkl'\n",
+    "if osp.exists(times_file):\n",
+    "    merged_top = load_pkl(times_file)\n",
+    "else:\n",
+    "    missing_rows = pd.DataFrame()\n",
+    "    for url in top_frame.url:\n",
+    "        new_info = get_additional_info(url)\n",
+    "        missing_rows = missing_rows.append(new_info, ignore_index = True)\n",
+    "    merged_times = pd.concat([times_frame, missing_rows], axis=1, join_axes=[top_frame.index])\n",
+    "    save_pkl(merged_times, times_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_frame.shape\n",
     "transform_rank(times_frame,'rank')"
    ]
   },
@@ -647,7 +647,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To be able to define the regions by country for Times, we define a dict by using Top."
+    "### Best universities by ratio :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the faculty/students ratio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_fac_stud = merged_times\n",
+    "ratios_calc(times_fac_stud,'faculty', 'students', 'faculty/students')\n",
+    "times_fac_stud = times_fac_stud[['title', 'faculty/students', 'rank_display']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_fac_stud = times_fac_stud.sort_values(['faculty/students', 'rank_display'], ascending=[False, True])\n",
+    "times_fac_stud.index = range(len(times_fac_stud.index))\n",
+    "times_fac_stud.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the international/total ratio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_int_stud = merged_times\n",
+    "ratios_calc(times_int_stud,'international students', 'students', 'international/students')\n",
+    "times_int_stud = times_int_stud[['title', 'international/students', 'rank_display']]\n",
+    "times_int_stud.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_int_stud = times_int_stud.sort_values(['international/students', 'rank_display'], ascending=[False, True])\n",
+    "times_int_stud.index = range(len(times_int_stud.index))\n",
+    "times_int_stud.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the visualization of the best elements we have."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_fac = top_fac_stud.head(10)\n",
+    "best_int = top_int_stud.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sns.barplot(y=\"title\", x=\"faculty/students\", hue=\"rank_display\", data=best_fac)\n",
+    "plt.title(\"Best universities by faculty to students ratio\")\n",
+    "plt.show()\n",
+    "\n",
+    "sns.barplot(y=\"title\", x=\"international/students\", hue=\"rank_display\", data=best_int)\n",
+    "plt.title(\"Best universities by internatinal students to students ratio\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Best universities by geographic region :\n",
+    "TODO : same than before (but not defined yet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unlike the TopUniversities ranking, the Times Higher Education does not include the region. This way, we decide to match the countries using the regions defined by the first ranking. "
    ]
   },
   {
@@ -677,20 +795,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#both are in Europe, amd Luxembourg isn't present anyway\n",
     "times_frame.loc[times_frame.region.isnull(), 'region'] = 'Europe' \n",
-    "times_frame[times_frame.location == 'Luxembourg'] #assignment works :D"
+    "times_frame[times_frame.location == 'Luxembourg'] #assignment works :D\n",
+    "# Need to work on the details (do everything by hand)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merging the two rankings"
+    "## Exercise 3 :  Merging the two rankings"
    ]
   },
   {
@@ -827,6 +946,20 @@
    "outputs": [],
    "source": [
     "#TODO: add rank? I don't think we need anything else, all other values are junk that won't be needed for question 4 and 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4 : Exploratory Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5 : Best Universities"
    ]
   }
  ],
