First 2 exercises finished

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -74,8 +74,7 @@
     "def save_pkl(obj, path):\n",
     "    \"\"\"Saves into a pickle file to given path.\"\"\"\n",
     "    with open(path, 'wb') as f:\n",
-    "        pk.dump(obj, f)\n",
-    "        \n",
+    "        pk.dump(obj, f)  \n",
     "        \n",
     "def load_pkl(path):\n",
     "    \"\"\"Loads a pickle file from a given path.\"\"\"\n",
@@ -94,9 +93,14 @@
     "#Functions allowing us to clean our data\n",
     "def transform_rank(df, cname):\n",
     "    \"\"\"Function that transforms the rank from a string to an int. \n",
-    "    The assert is needed to ensure that we have strings (else the code produces errors).\"\"\"\n",
-    "    assert df[cname].dtype == np.object_, \"We do not have strings in \" + cname\n",
-    "    df[cname] = df[cname].str.replace(r'\\D+', '').astype('int')\n",
+    "    We also use it to define a relative and an absolute ranking\"\"\"\n",
+    "    \n",
+    "    df.rename(columns = {cname: 'relative_ranking'}, inplace = True)\n",
+    "    df['absolute_ranking'] = df.index + 1\n",
+    "    \n",
+    "    #The assert is needed to ensure that we have strings (else the code produces errors).\n",
+    "    assert df['relative_ranking'].dtype == np.object_, \"We do not have strings in \" + 'relative_ranking'\n",
+    "    df['relative_ranking'] = df['relative_ranking'].str.replace(r'\\D+', '').astype('int')\n",
     "    \n",
     "def remove_blank_convert_float(x):\n",
     "    \"\"\"Removes blankspace from x and parses it to float.\"\"\"\n",
@@ -444,30 +448,7 @@
    "metadata": {},
    "source": [
     "### Best universities by geographic location :\n",
-    "TODO : what happened to our code ?!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Best countries and regions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We understood that the question asked us to create a rating of the regions and countries with the most universities that were in the top 200. So a better region or country is not the one that has the highest university but the one that has the most."
+    "We begin by sorting the countries by their number of universities in the 200 top schools."
    ]
   },
   {
@@ -479,20 +460,16 @@
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(merged_top['country'].value_counts())\n",
-    "# Unfortunatley, index can't be used in seaborn, so I have to change our dataframe a bit\n",
     "best_countries = best_countries.reset_index()\n",
     "best_countries.columns = ['country', 'universities']\n",
-    "\n",
-    "best_regions = pd.DataFrame(merged_top['region'].value_counts())\n",
-    "best_regions = best_regions.reset_index()\n",
-    "best_regions.columns = ['region', 'universities']"
+    "best_countries.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are only 5 regions so we will plot all of them, but for the countries, we will only take the 10 first countries and consider them the \"best\". Note that we have 34 countries total in the list."
+    "We perform the same actions for the regions we have"
    ]
   },
   {
@@ -503,8 +480,39 @@
    },
    "outputs": [],
    "source": [
-    "best_countries = best_countries.head(10) #they are already ordered.\n",
-    "\n",
+    "best_regions = pd.DataFrame(merged_top['region'].value_counts())\n",
+    "best_regions = best_regions.reset_index()\n",
+    "best_regions.columns = ['region', 'universities']\n",
+    "best_regions.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we plot the best regions and countries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_countries = best_countries.head(10)\n",
+    "best_regions = best_regions.head() #works as there are only 5 regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "sns.barplot(y='country', x='universities', data=best_countries)\n",
     "plt.title(\"Best countries according to number of top universities\")\n",
     "plt.show()\n",
@@ -512,48 +520,6 @@
     "sns.barplot(y=\"region\", x=\"universities\", data=best_regions)\n",
     "plt.title(\"Regions according to number of top universities\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: Keeping code below but not using it ^^\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is time to aggregate the universities by country and region in order to sort them by ranking."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "top_country = merged_top.sort_values(['country', 'rank_display'], ascending=[True,False])\n",
-    "top_country.set_index('country')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Need to work on it (cf Above)\n",
-    "top_region = merged_top\n",
-    "top_region = top_region.groupby(\"region\", as_index = False)[\"score\"].max()\n",
-    "top_region = top_region.sort_values(\"score\", ascending = False)\n",
-    "top_region.index = range(len(top_region.index))\n",
-    "top_region.head()"
    ]
   },
   {
@@ -757,8 +723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Best universities by geographic region :\n",
-    "TODO : same than before (but not defined yet)"
+    "### Best universities by geographic region :"
    ]
   },
   {
@@ -803,6 +768,84 @@
     "times_frame.loc[times_frame.region.isnull(), 'region'] = 'Europe' \n",
     "times_frame[times_frame.location == 'Luxembourg'] #assignment works :D\n",
     "# Need to work on the details (do everything by hand)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the ranking by country."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_countries = pd.DataFrame(merged_top['country'].value_counts())\n",
+    "best_countries = best_countries.reset_index()\n",
+    "best_countries.columns = ['country', 'universities']\n",
+    "best_countries.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the ranking by region."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_regions = pd.DataFrame(merged_top['region'].value_counts())\n",
+    "best_regions = best_regions.reset_index()\n",
+    "best_regions.columns = ['region', 'universities']\n",
+    "best_regions.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we plot our results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_countries = best_countries.head(10)\n",
+    "best_regions = best_regions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sns.barplot(y='country', x='universities', data=best_countries)\n",
+    "plt.title(\"Best countries according to number of top universities\")\n",
+    "plt.show()\n",
+    "\n",
+    "sns.barplot(y=\"region\", x=\"universities\", data=best_regions)\n",
+    "plt.title(\"Regions according to number of top universities\")\n",
+    "plt.show()"
    ]
   },
   {
