--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -199,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_frame = pd.DataFrame(topjson['data']).head(200)\n",
@@ -238,9 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
@@ -363,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'rank_display'], ascending=[False, True])\n",
@@ -383,9 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_int_stud = merged_top\n",
@@ -397,9 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_int_stud = top_int_stud.sort_values(['international/students', 'rank_display'], ascending=[False, True])\n",
@@ -429,16 +419,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sns.barplot(y=\"title\", x=\"faculty/students\", hue=\"rank_display\", data=best_fac)\n",
+    "sns.barplot(y=\"title\", x=\"faculty/students\", hue=\"rank_display\", palette=\"RdPu_d\", data=best_fac)\n",
     "plt.title(\"Best universities by faculty to students ratio\")\n",
     "plt.show()\n",
     "\n",
-    "sns.barplot(y=\"title\", x=\"international/students\", hue=\"rank_display\", data=best_int)\n",
+    "sns.barplot(y=\"title\", x=\"international/students\", hue=\"rank_display\", palette=\"RdPu_d\", data=best_int)\n",
     "plt.title(\"Best universities by internatinal students to students ratio\")\n",
     "plt.show()"
    ]
@@ -454,9 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(merged_top['country'].value_counts())\n",
@@ -475,9 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "best_regions = pd.DataFrame(merged_top['region'].value_counts())\n",
@@ -508,9 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sns.barplot(y='country', x='universities', data=best_countries)\n",
@@ -558,9 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "times_frame = pd.DataFrame(timesjson['data']).head(200) #Keep the first 200 schools\n",
@@ -626,9 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "times_fac_stud = merged_times\n",
@@ -759,9 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#both are in Europe, amd Luxembourg isn't present anyway\n",
@@ -834,9 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sns.barplot(y='country', x='universities', data=best_countries)\n",
@@ -1009,7 +983,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1023,7 +997,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
