Adding some of Leo's stuff

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -49,8 +49,8 @@
    "outputs": [],
    "source": [
     "sns.set_context(\"notebook\")\n",
-    "sns.set(style=\"whitegrid\")\n",
-    "sns.set_palette(\"hls\", 10)"
+    "sns.set(style=\"darkgrid\")\n",
+    "sns.set_palette(\"RdPu_d\", 10)"
    ]
   },
   {
@@ -422,11 +422,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.barplot(y=\"title\", x=\"faculty/students\", hue=\"rank_display\", palette=\"RdPu_d\", data=best_fac)\n",
+    "cmap = plt.cm.get_cmap('Blues')\n",
+    "pal = sns.color_palette(\"RdPu\", n_colors=14, desat=0.6)\n",
+    "\n",
+    "sns.barplot( y=\"title\", x=\"faculty/students\", palette=best_fac['rank_display'].map(lambda x: cmap(1-np.sqrt(1+(x - 200)/200))) , data=best_fac)\n",
     "plt.title(\"Best universities by faculty to students ratio\")\n",
     "plt.show()\n",
     "\n",
-    "sns.barplot(y=\"title\", x=\"international/students\", hue=\"rank_display\", palette=\"RdPu_d\", data=best_int)\n",
+    "sns.barplot(y=\"title\", x=\"international/students\", palette=best_int['rank_display'].map(lambda x: cmap(1-np.sqrt(1+(x - 200)/200))) , data=best_int)\n",
     "plt.title(\"Best universities by internatinal students to students ratio\")\n",
     "plt.show()"
    ]
@@ -611,7 +614,7 @@
    "source": [
     "times_fac_stud = merged_times\n",
     "ratios_calc(times_fac_stud,'faculty', 'students', 'faculty/students')\n",
-    "times_fac_stud = times_fac_stud[['title', 'faculty/students', 'rank_display']]"
+    "times_fac_stud = times_fac_stud[['name', 'faculty/students', 'rank']]"
    ]
   },
   {
@@ -737,7 +740,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#both are in Europe, amd Luxembourg isn't present anyway\n",
@@ -810,7 +815,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sns.barplot(y='country', x='universities', data=best_countries)\n",
