Final beautify of exercises 1 and 2

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -48,8 +48,8 @@
    },
    "outputs": [],
    "source": [
-    "sns.set_context(\"notebook\")\n",
     "sns.set(style=\"darkgrid\")\n",
+    "sns.set_context(\"notebook\")\n",
     "sns.set_palette(\"RdPu_d\", 10)"
    ]
   },
@@ -95,12 +95,12 @@
     "    \"\"\"Function that transforms the rank from a string to an int. \n",
     "    We also use it to define a relative and an absolute ranking\"\"\"\n",
     "    \n",
-    "    df.rename(columns = {cname: 'relative_ranking'}, inplace = True)\n",
-    "    df['absolute_ranking'] = df.index + 1\n",
+    "    df.rename(columns = {cname: 'relative_rank'}, inplace = True)\n",
+    "    df['absolute_rank'] = df.index + 1\n",
     "    \n",
     "    #The assert is needed to ensure that we have strings (else the code produces errors).\n",
-    "    assert df['relative_ranking'].dtype == np.object_, \"We do not have strings in \" + 'relative_ranking'\n",
-    "    df['relative_ranking'] = df['relative_ranking'].str.replace(r'\\D+', '').astype('int')\n",
+    "    assert df['relative_rank'].dtype == np.object_, \"We do not have strings in \" + 'relative_rank'\n",
+    "    df['relative_rank'] = df['relative_rank'].str.replace(r'\\D+', '').astype('int')\n",
     "    \n",
     "def remove_blank_convert_float(x):\n",
     "    \"\"\"Removes blankspace from x and parses it to float.\"\"\"\n",
@@ -199,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "top_frame = pd.DataFrame(topjson['data']).head(200)\n",
@@ -210,20 +212,11 @@
     "    top_frame['stars'],\\\n",
     "    top_frame['guide'] \n",
     "\n",
+    "#This step allows us to clean the (relative) rank for comparison and add an (absolute) rank for display\n",
+    "transform_rank(top_frame,'rank_display')\n",
+    "    \n",
     "#Allows us to have a quick look at the data.\n",
     "top_frame.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#This step allows us to clean the (relative) rank for comparison and add an (absolute) rank for display\n",
-    "transform_rank(top_frame,'rank_display')"
    ]
   },
   {
@@ -236,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
@@ -324,7 +319,12 @@
     "    for url in top_frame.url:\n",
     "        new_info = get_additional_info(url)\n",
     "        missing_rows = missing_rows.append(new_info, ignore_index = True)\n",
+    "    #We simply concatenate all the information and sort them in order to have a better layout similar to the one below\n",
     "    merged_top = pd.concat([top_frame, missing_rows], axis=1, join_axes=[top_frame.index])\n",
+    "    merged_top.rename(columns = {'title': 'name'}, inplace = True)\n",
+    "    merged_top = merged_top.reindex_axis(['country', 'region', 'name', 'score', 'relative_rank',\n",
+    "                                         'absolute_rank', 'international faculty', 'faculty',\n",
+    "                                         'international students', 'students', 'url'], axis=1)\n",
     "    save_pkl(merged_top, top_file)"
    ]
   },
@@ -347,23 +347,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "top_fac_stud = merged_top\n",
-    "ratios_calc(top_fac_stud,'faculty', 'students', 'faculty/students')\n",
-    "top_fac_stud = top_fac_stud[['title', 'faculty/students', 'rank_display']]"
+    "ratios_calc(top_fac_stud , 'faculty', 'students', 'faculty/students')\n",
+    "top_fac_stud = top_fac_stud[['name', 'faculty/students', 'relative_rank']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'rank_display'], ascending=[False, True])\n",
-    "top_fac_stud.index = range(len(top_fac_stud.index))\n",
+    "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'relative_rank'], ascending=[False, True])\n",
+    "top_fac_stud = top_fac_stud.reset_index()\n",
     "top_fac_stud.head()"
    ]
   },
@@ -377,23 +379,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "top_int_stud = merged_top\n",
     "ratios_calc(top_int_stud,'international students', 'students', 'international/students')\n",
-    "top_int_stud = top_int_stud[['title', 'international/students', 'rank_display']]\n",
-    "top_int_stud.head()"
+    "top_int_stud = top_int_stud[['name', 'international/students', 'relative_rank']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "top_int_stud = top_int_stud.sort_values(['international/students', 'rank_display'], ascending=[False, True])\n",
-    "top_int_stud.index = range(len(top_fac_stud.index))\n",
+    "top_int_stud = top_int_stud.sort_values(['international/students', 'relative_rank'], ascending=[False, True])\n",
+    "top_int_stud = top_int_stud.reset_index()\n",
     "top_int_stud.head()"
    ]
   },
@@ -419,17 +424,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "cmap = plt.cm.get_cmap('Blues')\n",
     "pal = sns.color_palette(\"RdPu\", n_colors=14, desat=0.6)\n",
     "\n",
-    "sns.barplot( y=\"title\", x=\"faculty/students\", palette=best_fac['rank_display'].map(lambda x: cmap(1-np.sqrt(1+(x - 200)/200))) , data=best_fac)\n",
+    "sns.barplot(y=\"name\", x=\"faculty/students\", palette=best_fac['relative_rank'].map(lambda x: cmap(1-np.sqrt(1+(x - 200)/200))) , data=best_fac)\n",
     "plt.title(\"Best universities by faculty to students ratio\")\n",
     "plt.show()\n",
     "\n",
-    "sns.barplot(y=\"title\", x=\"international/students\", palette=best_int['rank_display'].map(lambda x: cmap(1-np.sqrt(1+(x - 200)/200))) , data=best_int)\n",
+    "sns.barplot(y=\"name\", x=\"international/students\", palette=best_int['relative_rank'].map(lambda x: cmap(1-np.sqrt(1+(x - 200)/200))) , data=best_int)\n",
     "plt.title(\"Best universities by internatinal students to students ratio\")\n",
     "plt.show()"
    ]
@@ -445,7 +452,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(merged_top['country'].value_counts())\n",
@@ -464,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "best_regions = pd.DataFrame(merged_top['region'].value_counts())\n",
@@ -495,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "sns.barplot(y='country', x='universities', data=best_countries)\n",
@@ -543,7 +556,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "times_frame = pd.DataFrame(timesjson['data']).head(200) #Keep the first 200 schools\n",
@@ -552,11 +567,51 @@
     "    times_frame['nid'],\\\n",
     "    times_frame['record_type'],\\\n",
     "    times_frame['subjects_offered'],\\\n",
-    "    times_frame['stats_female_male_ratio']\n",
-    "times_frame['rank_order'] = times_frame['rank_order'].map(lambda x: int(int(x)/10)) #Keeping absolute order\n",
+    "    times_frame['stats_female_male_ratio'],\\\n",
+    "    times_frame['rank_order'],\\\n",
+    "    times_frame['aliases']\n",
     "\n",
-    "#We display the format of the elements we retrieved to get a better visualization\n",
+    "transform_rank(times_frame,'rank')\n",
+    "times_frame.rename(columns = {'stats_number_students': 'students', \n",
+    "                    'stats_pc_intl_students': 'international/students',\n",
+    "                    'stats_student_staff_ratio': 'faculty/students',\n",
+    "                    'location': 'country'}, inplace = True)    \n",
+    "\n",
     "times_frame.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data cleaning :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a very big difference between the TopUniversities ranking and the Times Higher Education ranking when it comes to ratios, they are already provided to us. For this reason, we need to format these elements so they can be easily used. We then display the head to ensure the results are sound."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "times_frame['faculty/students'] = 1/times_frame['faculty/students'].astype('float')\n",
+    "times_frame['international/students'] = (1/100) * times_frame['international/students'].str.replace('%', '').astype('int')\n",
+    "times_frame.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also have that the Times Higher Education does not include the region. This way, we decide to match the countries using the regions defined by the first ranking. "
    ]
   },
   {
@@ -564,32 +619,61 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "regions_by_country = dict(zip(top_frame.country, top_frame.region))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "times_frame['region'] = times_frame.country.map(regions_by_country)\n",
+    "times_frame[times_frame.region.isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Both universities are in Europe, so we simply \"hardcode\" them\n",
+    "times_frame.loc[times_frame.region.isnull(), 'region'] = 'Europe' \n",
+    "times_frame.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once our data is ready, we save all the needed elements in a new file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#We create a file to store the Times Higher Education Ranking\n",
     "times_file = DATA_FOLDER + 'times_ranking.pkl'\n",
     "if osp.exists(times_file):\n",
-    "    merged_top = load_pkl(times_file)\n",
+    "    times_frame = load_pkl(times_file)\n",
     "else:\n",
-    "    missing_rows = pd.DataFrame()\n",
-    "    for url in top_frame.url:\n",
-    "        new_info = get_additional_info(url)\n",
-    "        missing_rows = missing_rows.append(new_info, ignore_index = True)\n",
-    "    merged_times = pd.concat([times_frame, missing_rows], axis=1, join_axes=[top_frame.index])\n",
-    "    save_pkl(merged_times, times_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "times_frame.shape\n",
-    "transform_rank(times_frame,'rank')"
+    "    times_frame = times_frame.reindex_axis(['country', 'region', 'name', 'relative_rank',\n",
+    "                                         'absolute_rank', 'faculty/students', 'international/students', \n",
+    "                                         'students', 'url'], axis=1)\n",
+    "    save_pkl(times_frame, times_file)"
    ]
   },
   {
@@ -603,18 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the faculty/students ratio."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "times_fac_stud = merged_times\n",
-    "ratios_calc(times_fac_stud,'faculty', 'students', 'faculty/students')\n",
-    "times_fac_stud = times_fac_stud[['name', 'faculty/students', 'rank']]"
+    "We visualize the best universities according to their ratios (after sorting them)."
    ]
   },
   {
@@ -625,16 +698,10 @@
    },
    "outputs": [],
    "source": [
-    "times_fac_stud = times_fac_stud.sort_values(['faculty/students', 'rank_display'], ascending=[False, True])\n",
-    "times_fac_stud.index = range(len(times_fac_stud.index))\n",
-    "times_fac_stud.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is the international/total ratio."
+    "best_fac = times_frame[['name', 'faculty/students', 'relative_rank']]\n",
+    "best_fac = times_frame.sort_values(['faculty/students', 'relative_rank'], ascending=[False, True])\n",
+    "best_fac.index = range(len(best_fac.index))\n",
+    "best_fac = best_fac.head(10)"
    ]
   },
   {
@@ -645,57 +712,28 @@
    },
    "outputs": [],
    "source": [
-    "times_int_stud = merged_times\n",
-    "ratios_calc(times_int_stud,'international students', 'students', 'international/students')\n",
-    "times_int_stud = times_int_stud[['title', 'international/students', 'rank_display']]\n",
-    "times_int_stud.head()"
+    "best_int = best_int[['name', 'international/students', 'relative_rank']]\n",
+    "best_int = best_int.sort_values(['international/students', 'relative_rank'], ascending=[False, True])\n",
+    "best_int = best_int.reset_index()\n",
+    "best_int = best_int.head(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "times_int_stud = times_int_stud.sort_values(['international/students', 'rank_display'], ascending=[False, True])\n",
-    "times_int_stud.index = range(len(times_int_stud.index))\n",
-    "times_int_stud.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is the visualization of the best elements we have."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "best_fac = top_fac_stud.head(10)\n",
-    "best_int = top_int_stud.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sns.barplot(y=\"title\", x=\"faculty/students\", hue=\"rank_display\", data=best_fac)\n",
+    "cmap = plt.cm.get_cmap('Blues')\n",
+    "pal = sns.color_palette(\"RdPu\", n_colors=14, desat=0.6)\n",
+    "\n",
+    "sns.barplot(y=\"name\", x=\"faculty/students\", palette=best_fac['relative_rank'].map(lambda x: cmap(1-np.sqrt(1+(x - 200)/200))) , data=best_fac)\n",
     "plt.title(\"Best universities by faculty to students ratio\")\n",
     "plt.show()\n",
     "\n",
-    "sns.barplot(y=\"title\", x=\"international/students\", hue=\"rank_display\", data=best_int)\n",
+    "sns.barplot(y=\"name\", x=\"international/students\", palette=best_int['relative_rank'].map(lambda x: cmap(1-np.sqrt(1+(x - 200)/200))) , data=best_int)\n",
     "plt.title(\"Best universities by internatinal students to students ratio\")\n",
     "plt.show()"
    ]
@@ -715,43 +753,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "regions_by_country = dict(zip(top_frame.country, top_frame.region))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "times_frame['region'] = times_frame.location.map(regions_by_country)\n",
-    "times_frame[times_frame.region.isnull()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#both are in Europe, amd Luxembourg isn't present anyway\n",
-    "times_frame.loc[times_frame.region.isnull(), 'region'] = 'Europe' \n",
-    "times_frame[times_frame.location == 'Luxembourg'] #assignment works :D\n",
-    "# Need to work on the details (do everything by hand)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -762,11 +763,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "best_countries = pd.DataFrame(merged_top['country'].value_counts())\n",
+    "best_countries = pd.DataFrame(times_frame['country'].value_counts())\n",
     "best_countries = best_countries.reset_index()\n",
     "best_countries.columns = ['country', 'universities']\n",
     "best_countries.head()"
@@ -783,11 +784,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "best_regions = pd.DataFrame(merged_top['region'].value_counts())\n",
+    "best_regions = pd.DataFrame(times_frame['region'].value_counts())\n",
     "best_regions = best_regions.reset_index()\n",
     "best_regions.columns = ['region', 'universities']\n",
     "best_regions.head()"
@@ -816,7 +817,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -990,7 +991,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1004,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
